# Alemeno

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py  schemas.py  tasks.py  worker.py
app/routes/: jobs.py
